<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tokio Blues</string>
    <string name="action_settings">Settings</string>
    <string name="ip_cellphone_string">IP of the cellphone</string>
    <string name="ip_server_string">IP of the server</string>
    <string name="ip_introduce">Please introduce your server IP in the corresponding field</string>
    <string name="connect_button">Connect</string>
    <string name="connection_success">Successful connection</string>
    <string name="title_activity_accelerometer_info">accelerometerInfo</string>
    <string name="port_server_string">Port</string>
    <string name="ip_toast_error">You did not enter a valid IP</string>
    <string name="port_toast_error">You did not enter a valid Port</string>
    <string name="successful_connection">Successfully connected to:</string>
    <string name="port">Port:</string>
    <string name="ip">IP:</string>
    <string name="x_axis">X axis:</string>
    <string name="y_axis">Y axis:</string>
    <string name="z_axis">Z axis:</string>
    <string name="direction">Direction:</string>
    <string name="data_sensor">Data sensor</string>
    <string name="degrees">Degrees</string>

</resources>
