<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ipAddressActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ip_introduce"
        android:textAlignment="center"
        android:id="@+id/directions"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_cellphone_ip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ip_cellphone_string"
        android:layout_below="@+id/directions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_server_ip"
        android:hint="@string/ip_server_string"
        android:inputType="phone"
        android:maxLength="15"
        android:layout_below="@+id/textView_cellphone_ip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_button"
        android:id="@+id/button_connect"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/port_editText"
        android:hint="@string/port_server_string"
        android:inputType="phone"
        android:maxLength="4"
        android:layout_below="@+id/editText_server_ip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp" />
</RelativeLayout>
